week6/alb.tf


resource "aws_lb" "app_alb" {
  name               = "${var.app_name}-lb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [ aws_security_group.albsg.id ]
  subnets            = [ aws_subnet.public1.id, aws_subnet.public2.id ] 
}


resource "aws_lb_target_group" "app_tg" {
  name     = "${var.app_name}-tg"
  port     = var.container_port
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
  target_type = "ip"

  health_check {
    enabled             = true
    path                = "/"
    port = var.container_port
  }
}


resource "aws_lb_listener" "app_http_listerner" {
  load_balancer_arn = aws_lb.app_alb.arn
  port               = 80
  protocol           = "HTTP"
  default_action {
    type             = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301" # Permanent redirect
    }
  }
}

resource "aws_lb_listener" "app_https_listener" {
  load_balancer_arn = aws_lb.app_alb.arn
  port               = 443
  protocol           = "HTTPS"
  ssl_policy         = "ELBSecurityPolicy-TLS13-1-2-Res-PQ-2025-09"
  certificate_arn    = aws_acm_certificate.cert.arn
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app_tg.arn
  }
}
